--- a/galerie-chartres.html
+++ b/galerie-chartres.html
@@ -80,6 +80,11 @@
             container.appendChild(div);
         }
     </script>
+    <p>
+    &copy; 2025 Thomas Soleil. Tous droits réservés. 
+    <span style="margin: 0 10px;">|</span> 
+    <a href="mentions.html" style="color:#999; text-decoration:none; font-size:0.9em;">Mentions Légales</a>
+</p>
     <script src="js/script.js"></script>
 </body>
 </html>
