--- a/galeries.html
+++ b/galeries.html
@@ -68,7 +68,11 @@
         </div>
 
         <footer>
-            <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
+            <p>
+                &copy; 2025 Thomas Soleil. Tous droits réservés. 
+                <span style="margin: 0 10px;">|</span> 
+                <a href="mentions.html" style="color:#999; text-decoration:none; font-size:0.9em;">Mentions Légales</a>
+            </p>
         </footer>
     </main>
 
