--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <meta name="description" content="Portfolio de Thomas Soleil, photographe événementiel et portraitiste. Découvrez mes galeries : Mariage, Chartres, Studio et reportages.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas soleil| Photographe</title>
@@ -59,9 +60,11 @@
             </section>
 
         <footer>
-            <p style="text-align: center; margin-top: 50px; font-size: 0.8em; opacity: 0.6;">
-                &copy; 2025 Votre Nom. Tous droits réservés.
-            </p>
+<p>
+    &copy; 2025 Thomas Soleil. Tous droits réservés. 
+    <span style="margin: 0 10px;">|</span> 
+    <a href="mentions.html" style="color:#999; text-decoration:none; font-size:0.9em;">Mentions Légales</a>
+</p>
         </footer>
     </main>
     <script src="js/script.js"></script>
