--- a/contact.html
+++ b/contact.html
@@ -61,9 +61,11 @@
         </div>
 
         <footer>
-            <p style="text-align: center; margin-top: 50px; font-size: 0.8em; opacity: 0.6;">
-                &copy; 2025 Votre Nom. Tous droits réservés.
-            </p>
+<p>
+    &copy; 2025 Thomas Soleil. Tous droits réservés. 
+    <span style="margin: 0 10px;">|</span> 
+    <a href="mentions.html" style="color:#999; text-decoration:none; font-size:0.9em;">Mentions Légales</a>
+</p>
         </footer>
     </main>
     <script src="js/script.js"></script>
