--- a/galerie-chartres.html
+++ b/galerie-chartres.html
@@ -80,6 +80,11 @@
             container.appendChild(div);
         }
     </script>
+        <div class="social-links">
+            <p>Suivez-moi</p>
+            <a href="#" target="_blank">Instagram</a>
+            <a href="#" target="_blank">LinkedIn</a>
+        </div>
     <p>
     &copy; 2025 Thomas Soleil. Tous droits réservés. 
     <span style="margin: 0 10px;">|</span> 
