--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
             </section>
 
         <footer>
+                <div class="social-links">
+            <p>Suivez-moi</p>
+            <a href="#" target="_blank">Instagram</a>
+            <a href="#" target="_blank">LinkedIn</a>
+        </div>
 <p>
     &copy; 2025 Thomas Soleil. Tous droits réservés. 
     <span style="margin: 0 10px;">|</span> 
