--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <footer>
                 <div class="social-links">
             <p>Suivez-moi</p>
-            <a href="#" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/tomsol_photo/" target="_blank">Instagram</a>
             <a href="#" target="_blank">LinkedIn</a>
         </div>
 <p>
