--- a/a-propos.html
+++ b/a-propos.html
@@ -55,7 +55,7 @@
 
         <div class="social-links">
             <p>Suivez-moi</p>
-            <a href="#" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/tomsol_photo/" target="_blank">Instagram</a>
             <a href="#" target="_blank">LinkedIn</a>
         </div>
 
