--- a/galerie-chartres.html
+++ b/galerie-chartres.html
@@ -82,7 +82,7 @@
     </script>
         <div class="social-links">
             <p>Suivez-moi</p>
-            <a href="#" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/tomsol_photo/" target="_blank">Instagram</a>
             <a href="#" target="_blank">LinkedIn</a>
         </div>
     <p>
