--- a/galeries.html
+++ b/galeries.html
@@ -63,7 +63,7 @@
 
         <div class="social-links">
             <p>Suivez-moi</p>
-            <a href="#" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/tomsol_photo/" target="_blank">Instagram</a>
             <a href="#" target="_blank">LinkedIn</a>
         </div>
 
