--- a/mentions.html
+++ b/mentions.html
@@ -35,7 +35,7 @@
                 Le site <strong>www.tsoleil.fr</strong> est édité par :<br>
                 <strong>Thomas Soleil</strong><br>
                 Statut : Étudiant en BTS Photographie<br>
-                Email : <a href="mailto:votre.email@gmail.com">votre.email@gmail.com</a><br>
+                Email : <a href="mailto:thomas.soleil04@gmail.com">thomas.soleil04@gmail.com</a><br>
                 </p>
 
             <h4>2. Hébergement</h4>
