--- a/mentions.html
+++ b/mentions.html
@@ -49,15 +49,18 @@
 
             <h4>3. Propriété Intellectuelle</h4>
             <p>
-                L'ensemble de ce site relève de la législation française et internationale sur le droit d'auteur et la propriété intellectuelle.
-                Toutes les photographies présentes sur ce site sont l'œuvre exclusive de <strong>Thomas Soleil</strong>.
-                Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation écrite préalable de l'auteur.
+               L'ensemble de ce site relève de la législation française et internationale sur le droit d'auteur et la propriété intellectuelle. Toutes les photographies présentes sur ce site sont l'œuvre exclusive de <strong>Thomas Soleil</strong>. Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est strictement interdite, sauf autorisation écrite préalable de l'auteur.
             </p>
 
             <h4>4. Données Personnelles</h4>
             <p>
-                Les informations recueillies via le formulaire de contact (Nom, Email) ne sont utilisées que pour répondre à vos demandes. Elles ne sont ni enregistrées dans une base de données, ni revendues à des tiers.
-            </p>
+Le site assure à l'utilisateur une collecte et un traitement d'informations personnelles dans le respect de la vie privée conformément au Règlement Général sur la Protection des Données (RGPD).
+
+Données collectées : Les informations recueillies via le formulaire de contact (Nom, Email) ne sont utilisées que pour répondre à vos demandes. Elles ne sont ni enregistrées dans une base de données commerciale, ni revendues à des tiers.
+
+Durée de conservation : Les données sont conservées pendant une durée maximale de 3 ans à compter du dernier contact.
+
+Droits des utilisateurs : En vertu des articles 15 à 22 du RGPD, vous disposez d'un droit d'accès, de rectification, de suppression et d'opposition aux données vous concernant. Pour exercer ce droit, adressez votre demande par email à : thomas.soleil04@gmail.com            </p>
 
         </div>
 
