--- a/index.html
+++ b/index.html
@@ -59,20 +59,21 @@
             </div>
             </section>
 
-        <footer>
-                <div class="social-links">
-            <p>Suivez-moi</p>
-            <a href="https://www.instagram.com/tomsol_photo/" target="_blank">Instagram</a>
-            <a href="#" target="_blank">LinkedIn</a>
-        </div>
-        </footer>
-    <p>
-    &copy; 2025 Thomas Soleil. Tous droits réservés. 
-    <span style="margin: 0 10px;">|</span> 
-    <a href="mentions.html" style="color:#999; text-decoration:none; font-size:0.9em;">Mentions Légales</a>
-</p>
-    </main>
-    <script src="js/script.js"></script>
+<div class="social-links">
+        <p>Suivez-moi</p>
+        <a href="https://www.instagram.com/thomas.soleil_photo/" target="_blank">Instagram</a>
+        <a href="https://www.linkedin.com/in/votre-profil/" target="_blank">LinkedIn</a>
+    </div>
+
+    <footer>
+        <p>
+            &copy; 2025 Thomas Soleil. Tous droits réservés. 
+            <span style="margin: 0 10px;">|</span> 
+            <a href="mentions.html" style="color:#999; text-decoration:none; font-size:0.9em;">Mentions Légales</a>
+        </p>
+    </footer>
+
+</main> <script src="js/script.js"></script>
 
 </body> 
 </html>
