--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <meta property="og:title" content="Thomas Soleil | Photographe Événementiel & Portrait">
+    <meta property="og:description" content="Portfolio de Thomas Soleil. Découvrez mes galeries : Mariage, Chartres, Studio et reportages.">
+    <meta property="og:image" content="https://www.tsoleil.fr/images/hero-photo-accueil.jpg">
+    <meta property="og:url" content="https://www.tsoleil.fr">
+    <meta property="og:type" content="website">
 </head>
 <body>
 
