--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
         <section class="best-of-gallery">
             <div class="gallery-item">
-                <img src="images/photo-01.jpg" alt="Portrait en noir et blanc">
+                <img src="images/bapteme-01.jpg" alt="Bapteme Alban">
                 <div class="overlay">Portrait | N&B</div>
             </div>
             <div class="gallery-item">
