--- a/galeries.html
+++ b/galeries.html
@@ -45,10 +45,10 @@
                 </div>
             </a>
 
-            <a href="acces-prive.html" class="gallery-item">
-                <img src="images/photo-03.jpg" alt="Mariages">
+            <a href="galerie-bapteme.html" class="gallery-item">
+                <img src="images/bapteme-01.jpg" alt="Bapteme">
                 <div class="overlay-hover">
-                    <span class="cat-title">Espace Mariés 🔒</span>
+                    <span class="cat-title">Espace privé 🔒</span>
                 </div>
             </a>
 
