--- a/a-propos.html
+++ b/a-propos.html
@@ -21,7 +21,6 @@
         <nav class="main-nav">
             <a href="index.html">Accueil</a>
             <a href="galeries.html">Galeries</a>
-            <!-- <a href="services.html">Services</a>  -->
             <a href="a-propos.html" class="active">À Propos</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -35,7 +34,7 @@
                 <img src="images/portrait.jpg" alt="Thomas Soleil Photographe">
             </div>
 
-<div class="about-text">
+            <div class="about-text">
                 <h3 class="section-title" style="text-align: left; margin-bottom: 30px;">À propos</h3>
                 
                 <p>
@@ -62,23 +61,23 @@
                 <p class="signature">Thomas Soleil</p>
                 
                 <a href="contact.html" class="btn-contact">Me contacter</a>
-            </div>ref="contact.html" class="btn-contact">Me contacter</a>
-        </section>
-
-        <div class="social-links">
+            </div>
+        </section> <div class="social-links">
             <p>Suivez-moi</p>
             <a href="https://www.instagram.com/tomsol_photo/" target="_blank">Instagram</a>
             <a href="#" target="_blank">LinkedIn</a>
         </div>
 
         <footer>
-<p>
-    &copy; 2025 Thomas Soleil. Tous droits réservés. 
-    <span style="margin: 0 10px;">|</span> 
-    <a href="mentions.html" style="color:#999; text-decoration:none; font-size:0.9em;">Mentions Légales</a>
-</p>
+            <p>
+                &copy; 2025 Thomas Soleil. Tous droits réservés. 
+                <span style="margin: 0 10px;">|</span> 
+                <a href="mentions.html" style="color:#999; text-decoration:none; font-size:0.9em;">Mentions Légales</a>
+            </p>
         </footer>
     </main>
+
+    <script src="js/script.js"></script>
 
 </body>
 </html>
