--- a/a-propos.html
+++ b/a-propos.html
@@ -47,7 +47,7 @@
                 </p>
 
                 <p>
-                    Plutôt discret de nature, j'aime saisir les instants vrais sans m'imposer. Mais mes années de scoutisme et mon engagement auprès des enfants m'ont appris à créer du lien facilement. J'aime que mes séances soient des moments de partage (et si besoin, j'ai toujours un tour de magie en poche pour détendre l'atmosphère !).
+                    Plutôt discret de nature, j'aime saisir les instants vrais sans m'imposer. Mais mes années de scoutisme et mon engagement dans un service civique auprès des enfants m'ont appris à créer du lien facilement. J'aime que mes séances soient des moments de partage (et si besoin, j'ai toujours un tour de magie en poche pour détendre l'atmosphère !).
                 </p>
                 
                 <p>
@@ -55,7 +55,7 @@
                 </p>
 
                 <p>
-                    Basé à <strong>Toulouse et Castres</strong>, mais toujours prêt à bouger.
+                    Basé à <strong>Toulouse et Castres</strong>.
                 </p>
 
                 <p class="signature">Thomas Soleil</p>
