--- a/a-propos.html
+++ b/a-propos.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <header class="hero-header header-mini">
+    <header class="hero-header header-mini bg-apropos">
         <div class="site-branding">
             <h1>Thomas Soleil</h1>
             <h2>Photographe Événementiel & Portrait</h2>
