--- a/galeries.html
+++ b/galeries.html
@@ -38,7 +38,7 @@
                 </div>
             </a>
 
-            <a href="galerie-events.html" class="gallery-item">
+            <a href="galerie-montagne.html" class="gallery-item">
                 <img src="images/photo-02.jpg" alt="Événements">
                 <div class="overlay-hover">
                     <span class="cat-title">Événements</span>
