VOIR MON PORTFOLIO

--- a/index.html
+++ b/index.html
@@ -55,30 +55,20 @@
         <section class="best-of-gallery">
             <div class="gallery-item">
                 <img src="images/bapteme-01.jpg" alt="Bapteme Alban">
-                <div class="overlay">Portrait | N&B</div>
+                <div class="overlay">Bapteme Alban</div>
             </div>
             <div class="gallery-item">
-                <img src="images/photo-02.jpg" alt="Reportage de mariage">
-                <div class="overlay">Mariage | Reportage</div>
+                <img src="images/photo-02.jpg" alt="Montagne">
+                <div class="overlay">Montagne</div>
             </div>
             <div class="gallery-item">
-                <img src="images/photo-03.jpg" alt="Photographie d'architecture">
-                <div class="overlay">Architecture</div>
-            </div>
-            <div class="gallery-item">
-                <img src="images/photo-04.jpg" alt="Séance photo de mode">
-                <div class="overlay">Mode | Studio</div>
-            </div>
-            <div class="gallery-item">
-                <img src="images/photo-05.jpg" alt="Cliché événementiel">
-                <div class="overlay">Événementiel</div>
-            </div>
-            <div class="gallery-item">
-                <img src="images/photo-06.jpg" alt="Paysage au lever du soleil">
-                <div class="overlay">Paysage</div>
+                <img src="images/photo-05.jpg" alt="Pélerinage de Chartres">
+                <div class="overlay">Pélerinage de Chartres</div>
             </div>
             </section>
-
+    <div class="cta-container">
+            <a href="galeries.html" class="btn-see-more">VOIR MON PORTFOLIO</a>
+        </div>
 <div class="social-links">
         <p>Suivez-moi</p>
         <a href="https://www.instagram.com/thomas.soleil_photo/" target="_blank">Instagram</a>
