--- a/galeries.html
+++ b/galeries.html
@@ -39,9 +39,9 @@
             </a>
 
             <a href="galerie-montagne.html" class="gallery-item">
-                <img src="images/photo-02.jpg" alt="Événements">
+                <img src="images/photo-02.jpg" alt="Montagne">
                 <div class="overlay-hover">
-                    <span class="cat-title">Événements</span>
+                    <span class="cat-title">Montagne</span>
                 </div>
             </a>
             
