--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             </section>
     <div class="cta-container">
-            <a href="galeries.html" class="btn-see-more">VOIR MON PORTFOLIO</a>
+            <a href="galeries.html" class="btn-see-more">Voir mon Portfolio</a>
         </div>
 <div class="social-links">
         <p>Suivez-moi</p>
