--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 
                     <a href="galeries.html" class="horizontal-card">
                         <img src="images/photo-04.jpg" alt="Soirée">
-                        <div class="card-info"><h4>Voyage</h4></div>
+                        <div class="card-info"><h4>Soirée</h4></div>
                     </a>
 
                     <a href="galeries.html" class="horizontal-card">
-                        <img src="images/photo-06.jpg" alt="Architecture">
-                        <div class="card-info"><h4>Architecture</h4></div>
+                        <img src="images/photo-06.jpg" alt="Prise d'habitx&">
+                        <div class="card-info"><h4>Prise d'habit</h4></div>
                     </a>
 
 
@@ -102,12 +102,12 @@
 
                     <a href="galeries.html" class="horizontal-card">
                         <img src="images/photo-04.jpg" alt="Soirée">
-                        <div class="card-info"><h4>Voyage</h4></div>
+                        <div class="card-info"><h4>Soirée</h4></div>
                     </a>
 
                     <a href="galeries.html" class="horizontal-card">
-                        <img src="images/photo-06.jpg" alt="Architecture">
-                        <div class="card-info"><h4>Architecture</h4></div>
+                        <img src="images/photo-06.jpg" alt="Prise d'habit">
+                        <div class="card-info"><h4>Prise d'habit</h4></div>
                     </a>
 
                 </div>
