--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="horizontal-scroll-wrapper" id="auto-scroll-container">
                     
                     <a href="galerie-chartres.html" class="horizontal-card">
-                        <img src="images/chartres/Chartres (1).jpg" alt="Chartres">
+                        <img src="images/photo-05.jpg" alt="Chartres">
                         <div class="card-info"><h4>Chartres</h4></div>
                     </a>
                     <a href="galerie-bapteme.html" class="horizontal-card">
@@ -73,16 +73,16 @@
                         <div class="card-info"><h4>Portraits</h4></div>
                     </a>
                     <a href="galeries.html" class="horizontal-card">
-                        <img src="images/photo-04.jpg" alt="Voyage">
-                        <div class="card-info"><h4>Voyage</h4></div>
+                        <img src="images/photo-04.jpg" alt="Soirée">
+                        <div class="card-info"><h4>Soirée</h4></div>
                     </a>
-                    <a href="galeries.html" class="horizontal-card">
-                        <img src="images/photo-05.jpg" alt="Architecture">
-                        <div class="card-info"><h4>Architecture</h4></div>
+                    <a href="galerie-montagne.html" class="horizontal-card">
+                        <img src="images/photo-02.jpg" alt="Montagne">
+                        <div class="card-info"><h4>Montagne</h4></div>
                     </a>
 
                     <a href="galerie-chartres.html" class="horizontal-card">
-                        <img src="images/chartres/Chartres (1).jpg" alt="Chartres">
+                        <img src="images/photo-05.jpg" alt="Chartres">
                         <div class="card-info"><h4>Chartres</h4></div>
                     </a>
                     <a href="galerie-bapteme.html" class="horizontal-card">
@@ -94,12 +94,12 @@
                         <div class="card-info"><h4>Portraits</h4></div>
                     </a>
                     <a href="galeries.html" class="horizontal-card">
-                        <img src="images/photo-04.jpg" alt="Voyage">
-                        <div class="card-info"><h4>Voyage</h4></div>
+                        <img src="images/photo-04.jpg" alt="Soirée">
+                        <div class="card-info"><h4>Soirée</h4></div>
                     </a>
-                    <a href="galeries.html" class="horizontal-card">
-                        <img src="images/photo-05.jpg" alt="Architecture">
-                        <div class="card-info"><h4>Architecture</h4></div>
+                    <a href="galerie-montagne.html" class="horizontal-card">
+                        <img src="images/photo-02.jpg" alt="Montagne">
+                        <div class="card-info"><h4>Montagne</h4></div>
                     </a>
 
                 </div>
