--- a/galeries.html
+++ b/galeries.html
@@ -91,9 +91,9 @@
         const nbrPhotosVrac = 20; // METTEZ LE BON NOMBRE
         const dossierVrac = "images/vrac";
         
-        // Configuration pour les noms avec parenthèses : "vrac (1).jpg"
-        const debutNomVrac = "vrac ("; 
-        const finNomVrac = ").jpg";
+        // Configuration pour les noms avec parenthèses : "vrac-1.jpg"
+        const debutNomVrac = "vrac-"; 
+        const finNomVrac = ".jpg";
 
         const containerVrac = document.getElementById('vrac-container');
 
