--- a/galerie-chartres.html
+++ b/galerie-chartres.html
@@ -48,8 +48,8 @@
         const dossier = "images/chartres";
 
         // 3. Comment s'appellent-elles ? (Ex: "Chartres (1).jpg")
-        const debutNom = "Chartres (";
-        const finNom = ").jpg";
+        const debutNom = "chartres-";
+        const finNom = ".jpg";
 
         // =================================================
 
