--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                         <img src="images/photo-05.jpg" alt="Chartres">
                         <div class="card-info"><h4>Chartres</h4></div>
                     </a>
-                    <a href="galerie-bapteme.html" class="horizontal-card">
-                        <img src="images/bapteme-01.jpg" alt="Baptême">
-                        <div class="card-info"><h4>Baptême</h4></div>
+                    <a href="galerie-rock-toulouse.html" class="horizontal-card">
+                        <img src="images/rocktoulouse/Rock-31.jpg" alt="Rock Toulouse">
+                        <div class="card-info"><h4>Rock Toulouse</h4></div>
                     </a>
                     <a href="galeries.html" class="horizontal-card">
                         <img src="images/photo-03.jpg" alt="Portraits">
@@ -85,9 +85,9 @@
                         <img src="images/photo-05.jpg" alt="Chartres">
                         <div class="card-info"><h4>Chartres</h4></div>
                     </a>
-                    <a href="galerie-bapteme.html" class="horizontal-card">
-                        <img src="images/bapteme-01.jpg" alt="Baptême">
-                        <div class="card-info"><h4>Baptême</h4></div>
+                    <a href="galerie-rock-toulouse.html" class="horizontal-card">
+                        <img src="images/rocktoulouse/Rock-31.jpg" alt="Rock Toulouse">
+                        <div class="card-info"><h4>Rock Toulouse</h4></div>
                     </a>
                     <a href="galeries.html" class="horizontal-card">
                         <img src="images/photo-03.jpg" alt="Portraits">
