--- a/galeries.html
+++ b/galeries.html
@@ -31,7 +31,7 @@
         <section class="best-of-gallery">
             
             <a href="galerie-chartres.html" class="gallery-item">
-                <img src="images/chartres/Chartres (12).jpg" alt="Galerie Chartres">
+                <img src="images/photo-05.jpg" alt="Galerie Chartres">
                 <div class="overlay-hover">
                     <span class="cat-title">Chartres</span>
                 </div>
