--- a/galeries.html
+++ b/galeries.html
@@ -44,10 +44,10 @@
                 </div>
             </a>
             
-            <a href="galerie-bapteme.html" class="gallery-item">
-                <img src="images/bapteme-01.jpg" alt="Bapteme"> 
+            <a href="galerie-rock-toulouse.html" class="gallery-item">
+                <img src="images/rocktoulouse/Rock-31.jpg" alt="Rock Toulouse">
                 <div class="overlay-hover">
-                    <span class="cat-title">Espace privé 🔒</span>
+                    <span class="cat-title">Rock Toulouse</span>
                 </div>
             </a>
 
