--- a/galeries.html
+++ b/galeries.html
@@ -41,7 +41,7 @@
                 <img src="images/photo-02.jpg" alt="Montagne">
                 <div class="overlay-hover">
                     <span class="cat-title">Montagne</span>
-                </div>
+                </div>  aqs
             </a>
             
             <a href="galerie-rock-toulouse.html" class="gallery-item">
