--- a/galeries.html
+++ b/galeries.html
@@ -51,10 +51,10 @@
                 </div>
             </a>
 
-            <a href="galerie-perso.html" class="gallery-item">
-                <img src="images/photo-04.jpg" alt="Artistique">
+            <a href="galerie-noelchorunum.html" class="gallery-item">
+                <img src="images/noelchorunum/noelchorunum-1.jpg" alt="Artistique">
                 <div class="overlay-hover">
-                    <span class="cat-title">Projets Perso</span>
+                    <span class="cat-title">Concert Noël Chor Unum</span>
                 </div>
             </a>
 
