--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <footer style="text-align: center; padding: 50px 0; color: #666; font-size: 0.8rem;">
         <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
     </footer>
-
+    <script src="js/script.js"></script>
     <script src="js/config.js"></script>
     <script>
         const container = document.getElementById('albums-list');
