--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Soleil | Photographe</title>
-    <link rel="stylesheet" href="css/style.css?v=2">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,6 +14,7 @@
         <div class="nav-links">
             <a href="index.html" class="active">Albums</a>
             <a href="a-propos.html">À Propos</a>
+            <a href="services.html">Prestations</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
@@ -29,29 +30,12 @@
         <section class="albums-grid" id="albums-list"></section>
     </main>
 
-    <footer style="text-align: center; padding: 50px 0; color: #666; font-size: 0.8rem;">
+    <footer>
         <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
     </footer>
-    <script src="js/script.js"></script>
+
     <script src="js/config.js"></script>
-    <script>
-        const container = document.getElementById('albums-list');
-        
-        // On boucle sur chaque album défini dans config.js
-        siteConfig.albums.forEach(album => {
-            const card = document.createElement('a');
-            card.href = `galerie.html?id=${album.id}`; // Lien magique vers la page unique
-            card.className = 'album-card';
-            
-            card.innerHTML = `
-                <img src="${album.cover}" alt="${album.title}">
-                <div class="album-info">
-                    <h3>${album.title}</h3>
-                    <span>${album.date}</span>
-                </div>
-            `;
-            container.appendChild(card);
-        });
-    </script>
+    <script src="js/script.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
