--- a/mentions.html
+++ b/mentions.html
@@ -19,7 +19,7 @@
         </div>
     </nav>
 
-    <main class="content-wrapper" style="padding-top: 150px; max-width: 800px;">
+    <main class="content-wrapper" style="padding-top: 150px; max-width: 800px; margin: 0 auto;">
         
         <div style="text-align: center; margin-bottom: 60px;">
             <h1 style="font-size: 3rem; margin-bottom: 10px;">Mentions Légales</h1>
@@ -74,9 +74,11 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
+        <p>
+            &copy; 2025 Thomas Soleil. Tous droits réservés. 
+        </p>
     </footer>
-    
+
     <script src="js/script.js"></script>
 </body>
 </html>
