--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 
     <nav>
         <a href="index.html" class="logo">Thomas Soleil</a>
+        <div class="burger"><div></div><div></div><div></div></div>
         <div class="nav-links">
             <a href="index.html">Albums</a>
             <a href="a-propos.html">À Propos</a>
@@ -18,9 +19,11 @@
         </div>
     </nav>
 
-    <main class="contact-section">
-        <h1 style="font-size: 3rem; margin-bottom: 10px;">Parlons de votre projet.</h1>
-        <p style="color: #888; margin-bottom: 50px;">Une question, un devis ? Je vous réponds sous 24h.</p>
+    <main class="content-wrapper">
+        <div class="contact-header">
+            <h1>Parlons de votre projet.</h1>
+            <p>Une question, un devis ? Je vous réponds sous 24h.</p>
+        </div>
 
         <form action="https://formspree.io/f/xblwgnop" method="POST">
             <div class="form-group">
@@ -38,13 +41,13 @@
             <button type="submit">Envoyer</button>
         </form>
 
-        <div class="social-links" style="border-top: 1px solid #222; padding-top: 40px;">
-            <p>Me suivre</p>
+        <div class="social-section">
+            <p style="margin-bottom:20px;">Me suivre</p>
             <a href="https://www.instagram.com/tomsol_photo/" target="_blank">Instagram</a>
             <a href="#" target="_blank">LinkedIn</a>
         </div>
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
