--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
     <nav>
         <a href="index.html" class="logo">Thomas Soleil</a>
+        
+        <div class="burger">
+            <div></div><div></div><div></div>
+        </div>
+
         <div class="nav-links">
             <a href="index.html" class="active">Albums</a>
             <a href="a-propos.html">À Propos</a>
@@ -34,7 +39,6 @@
     </footer>
 
     <script src="js/config.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/home.js"></script>
+    <script src="js/main.js"></script> <script src="js/home.js"></script>
 </body>
 </html>
