--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Soleil | Photographe</title>
+    
+    <link rel="preload" as="image" href="images/hero-photo-accueil_2.jpg">
+
     <link rel="stylesheet" href="css/style.css">
-<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,600;1,400&family=Montserrat:wght@300;400&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,600;1,400&family=Montserrat:wght@300;400&display=swap" rel="stylesheet"></head>
 <body>
 
     <nav>
