--- a/contact.html
+++ b/contact.html
@@ -48,5 +48,12 @@
     </main>
 
     <script src="js/main.js"></script>
+    <footer>
+    <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
+    <p style="margin-top: 10px;">
+        <a href="mentions.html">Mentions Légales</a> | 
+        <a href="contact.html">Contact</a>
+    </p>
+</footer>
 </body>
 </html>
