--- a/galerie.html
+++ b/galerie.html
@@ -35,5 +35,12 @@
     <script src="js/config.js"></script>
     <script src="js/main.js"></script>
     <script src="js/gallery.js"></script>
+    <footer>
+    <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
+    <p style="margin-top: 10px;">
+        <a href="mentions.html">Mentions Légales</a> | 
+        <a href="contact.html">Contact</a>
+    </p>
+</footer>
 </body>
 </html>
