--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
         <section class="albums-grid" id="albums-list"></section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
-    </footer>
-
+<footer>
+    <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
+    <p style="margin-top: 10px;">
+        <a href="mentions.html">Mentions Légales</a> | 
+        <a href="contact.html">Contact</a>
+    </p>
+</footer>
     <script src="js/config.js"></script>
     <script src="js/main.js"></script> <script src="js/home.js"></script>
 </body>
