--- a/mentions.html
+++ b/mentions.html
@@ -44,9 +44,13 @@
             <p>Les informations recueillies via le formulaire de contact ne sont utilisées que pour répondre à vos demandes professionnelles.</p>
         </div>  
 
-        <footer>
-            <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
-        </footer>
+<footer>
+    <p>&copy; 2025 Thomas Soleil. Tous droits réservés.</p>
+    <p style="margin-top: 10px;">
+        <a href="mentions.html">Mentions Légales</a> | 
+        <a href="contact.html">Contact</a>
+    </p>
+</footer>
     </main>
 
     <script src="js/main.js"></script>
