--- a/a-propos.html
+++ b/a-propos.html
@@ -21,7 +21,7 @@
     <main class="content-wrapper">
         <div class="about-grid">
             <div class="about-image">
-                <img src="images/portrait.jpg" alt="Thomas Soleil">
+               <img src="images/portrait.webp" alt="Thomas Soleil">
             </div>
             <div class="about-content">
                 <h1>L'œil derrière<br>l'objectif.</h1>
