--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </p>
 </footer>
     <script src="js/config.js"></script>
-    <script src="js/main.js"></script> <script src="js/home.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
