--- a/a-propos.html
+++ b/a-propos.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav>
-        <a href="index.html" class="logo">Thomas Soleil</a>
+        <a href="index.html" class="logo">TS</a>
         <div class="burger"><div></div><div></div><div></div></div>
         <div class="nav-links">
             <a href="index.html">Albums</a>
