--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav>
-        <a href="index.html" class="logo">Thomas Soleil</a>
+        <a href="index.html" class="logo">T.S</a>
         
         <div class="burger">
             <div></div><div></div><div></div>
