--- a/galerie.html
+++ b/galerie.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav>
-        <a href="index.html" class="logo"> TS</a>
+        <a href="index.html" class="logo"> T.S</a>
         <div class="burger"><div></div><div></div><div></div></div>
         <div class="nav-links">
             <a href="index.html" class="active">Albums</a>
